--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "express": "^4.17.1",
     "@graphql-tools/merge": "^6.2.7",
     "@graphql-tools/load-files": "^6.2.5",
-    "graphql-tools": "^7.0.3"
+    "graphql-tools": "^7.0.3",
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.4",
+    "agentkeepalive": "^4.1.3"
   },
   "devDependencies": {
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "@types/request-promise-native": "^1.0.6"
   }
 }
