--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "postinstall": "yarn tsc"
   },
   "dependencies": {
+    "@graphql-tools/load-files": "^6.2.5",
+    "@graphql-tools/merge": "^6.2.7",
+    "@types/lru-cache": "^5.1.0",
+    "agentkeepalive": "^4.1.3",
     "apollo-server-express": "^2.19.2",
     "express": "^4.17.1",
-    "@graphql-tools/merge": "^6.2.7",
-    "@graphql-tools/load-files": "^6.2.5",
     "graphql-tools": "^7.0.3",
+    "lru-cache": "^6.0.0",
     "request": "^2.81.0",
-    "request-promise-native": "^1.0.4",
-    "agentkeepalive": "^4.1.3"
+    "request-promise-native": "^1.0.4"
   },
   "devDependencies": {
-    "typescript": "^3.9.5",
-    "@types/request-promise-native": "^1.0.6"
+    "@types/request-promise-native": "^1.0.6",
+    "typescript": "^3.9.5"
   }
 }
