--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "graphql-tools": "^7.0.3",
     "lru-cache": "^6.0.0",
     "request": "^2.81.0",
-    "request-promise-native": "^1.0.4"
+    "request-promise-native": "^1.0.4",
+    "uWebSockets.js": "uNetworking/uWebSockets.js#v18.14.0",
+    "ugql": "^1.1.7"
   },
   "devDependencies": {
     "@types/request-promise-native": "^1.0.6",
