--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "graphql-tools": "^7.0.3",
     "lru-cache": "^6.0.0",
     "request": "^2.81.0",
-    "request-promise-native": "^1.0.4"
+    "request-promise-native": "^1.0.4",
+    "undici": "^3.3.6"
   },
   "devDependencies": {
     "@types/request-promise-native": "^1.0.6",
